# goalty-remotion

./: .gitignore  Dockerfile  README.md  app.py  b2.py  database.py  database_bounding_box.py  pyproject.toml  requirements.txt  run.sh  test_database_bounding_box.py
.github/workflows/: basic_render.yaml  docker_build.yaml  docker_build.yml  main.yml
SAM/: Dockerfile
modal_app/: Dockerfile  Dockerfile-deploy-render  pyproject.toml  render_video.py  test_modal_endpoint.sh  upload_video_to_youtube.py
react_app/: .react.production  jest.config.js  package-lock.json  package.json  render.mjs  run.sh
react_app/public/: index.html
react_app/src/: App.js  index.js  index_app.js
react_app/src/components/: ArrowKeyHandler.js  ClipMaker.css  ClipMaker.js  ClipSettings.css  ClipSettings.js  CloudRenderButton.js  DictationDisplay.js  FrameRangeSlider.js  HighlightAdder.js  Home.js  HotkeyConfig.js  HotkeySection.js  Hotkeys.js  Layout.js  RangesSection.js  RenderCommand.css  RenderCommand.js  RenderHistory.css  RenderHistory.js  StudioHome.css  StudioHome.js  TagAdder.js  TagsTable.css  TagsTable.js  VideoDetail.css  VideoDetail.js  VideoPlayer.js  VideoSeeker.js  Videos.css  Videos.js  ViewFilm.css  ViewFilm.js  ViewHotkeyGroup.css  ViewHotkeyGroup.js
react_app/src/components/hotkeys/: AutoListen.js  HighlightAdder.js  Listen.js  PlayPauseController.js  RangeBuilder.js  SpeedController.js  TagAdder.js  VideoSeeker.js  index.js
react_app/src/components/pages/: App.js  B2Files.css  B2Files.js  CVDatasets.css  CVDatasets.js  (+22 more)
react_app/src/compositions/: Root.tsx  testComp.tsx
react_app/src/constants/: tagNames.js
react_app/src/services/: b2Service.js  filmService.js
react_app/tests/: setup.js
routes/: b2_files.py  bounding_boxes.py  datasets.py  films.py  homography.py  hotkeys.py  upload.py  videos.py
templates/: base.html  studio.html
templates/bounding_boxes/: index.html  player_detail.html  video_detail.html
(+48 files in other folders)
