[tool.poetry]
name = "000-markmaker"
version = "0.1.0"
description = ""
authors = ["Caleb <calebcauthon@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-cors = "^5.0.0"
yt-dlp = "^2024.10.22"
b2sdk = "^2.6.0"
gunicorn = "^23.0.0"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
clip-client = "^0.8.3"
replicate = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
