[tool.poetry]
name = "000-markmaker"
version = "0.1.0"
description = ""
authors = ["Caleb Cauthon <calebcauthon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flask = "^3.1.0"
flask-cors = "^5.0.0"
yt-dlp = "^2025.1.26"
b2sdk = "^2.8.0"
gunicorn = "^23.0.0"
inference-sdk = "^0.37.1"
ell-ai = {extras = ["all"], version = "^0.0.15"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
