[tool.poetry]
name = "modal-app"
version = "0.1.0"
description = ""
authors = ["Caleb <calebcauthon@gmail.com>"]
readme = "README.md"
packages = [{include = "modal_app"}]

[tool.poetry.dependencies]
python = "^3.10"
modal = "^0.65.19"
b2 = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
